- Add support for wxICON_AUTH_NEEDED to wxMessageDialog (Chris Spencer).
- Fix printing too many copies of the document in some cases (John Roberts).
- Fix DST confusion in wxFileName::{Set,Get}Times().

wxOSX/Cocoa:

- Implement image support in wxNotebook (Malcolm MacLeod).
- Add support for button mnemonics (joostn).
- Implemented wxTextCtrl::SetDefaultStyle().


2.9.4: (released 2012-07-09)
------

INCOMPATIBLE CHANGES SINCE 2.9.3

- wxDataViewListCtrl doesn't delete its client data any more for compatibility
  with wxListCtrl, use full wxDataViewCtrl if you don't need compatibility.

All:

- Added wxLogFormatter to allow customizing wxLog output (Sébastien Gallou).
- Added wxFSInputStream for reading data from wxFileSystem (Armel Asselin).
- Added "%z" support to wxDateTime::Format() and Parse() (Armel Asselin).
- Add wxHTTP::SetPostBuffer(wxMemoryBuffer) and SetPostText() (Eran Ifrah).
- Fix wrong time zone used in wxDateTime::UNow().
- Fix performance of wxStdInputStream with MSVC8/9 (wsu).
- Added wxFileName::Exists().
- Implement wxThread::SetConcurrency() for POSIX systems (Igor Korot).
- Fix deadlock due to too many events in Unix console apps (Lukasz Michalski).
- Added wxDir::GetNameWithSep().
- Allow unloading wxPluginLibrary objects in any order (manyleaves).
- Fix passing strings with embedded NULs in wxThreadEvents (Steffen Olszewski).
- Add wxList::AsVector<>() helper (troelsk).

All (GUI):

- Add wxGrid::Render() for printing wxGrid (John Roberts).
- Added strike-through support to wxFont (Igor Korot).
- Add support for horizontal mouse wheel events to MSW and GTK (Lauri Nurmi).
- Fix infinite loop in wxHtmlEasyPrinting when trying to page break images
  taller than the page height in wxHtmlEasyPrinting (Laurent Poujoulat).
- Added wxFilePickerCtrl::SetInitialDirectory().
- Added wxDataViewItemAttr::SetBackgroundColour() and implemented it in generic
  wxDataViewCtrl (Andrew Xu).
- Fix item alignment in icon view in the generic wxListCtrl.